--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,10 +34,10 @@ body {
   position: fixed;
   top: 25%;
   left: 50%;
+  transform: translate(-50%, -50%);
   color: white;
   font-family: 'Fredoka One', cursive;
   font-weight: 500;
-  margin-top: 110px;
 }
 
 .full-game {
