Display styling added to 'memory-game' for better responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,10 @@ body {
 }
 
 .memory-game {
-  width: 45%;
+  width: 65%;
+  height: 480px;
   margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  perspective: 1000px;
 }
