--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,3 +48,12 @@ body {
   flex-wrap: wrap;
   perspective: 1000px;
 }
+
+.memory-card:active {
+  transform: scale(0.97);
+  transition: transform .2s;
+}
+
+.memory-card.flip {
+  transform: rotateY(180deg);
+}
