CSS styling for cards edited

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,3 +57,8 @@ body {
 .memory-card.flip {
   transform: rotateY(180deg);
 }
+
+.front-face {
+  transform: rotateY(180deg);
+  background-image: url("assets/images/easy/brick.png");
+}
