--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,6 +63,10 @@ body {
   width: 100%;
   height: 100%;
   padding: 20px;
+  position: absolute;
+  border-radius: 5px;
+  background: #1C7CCC;
+  backface-visibility: hidden;
 }
 
 .front-face {
