--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,3 +77,16 @@ body {
 .select-diff, .back-face {
   cursor: pointer;
 }
+
+.mem-modal {
+  position: fixed;
+  z-index: 5;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
