--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -90,3 +90,11 @@ body {
   background-color: rgb(0,0,0);
   background-color: rgba(0,0,0,0.4);
 }
+
+.mem-modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
