Js functionality added to modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,3 +98,24 @@ body {
   border: 1px solid #888;
   width: 80%;
 }
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover, .close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.btn {
+    margin: 0px 20px;
+}
+
+.select-diff:hover, #restart:hover {
+  border: 1px solid darkgreen;
+}
