Media query added to hide game on screens lower than 600px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,3 +216,10 @@ body {
 .locked {
   pointer-events: none;
 }
+
+@media only screen and (max-width: 600px) {
+  .full-game * {
+  visibility: hidden;
+  position: absolute;
+  }
+}
