--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,6 +173,7 @@ body {
     overflow: auto;
     background-color: rgb(0, 0, 0);
     background-color: rgba(0, 0, 0, 0.4);
+    font-family: 'Fredoka One', cursive;
 }
 
 .mem-modal-content {
