--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,8 +172,9 @@ body {
     height: 100%;
     overflow: auto;
     background-color: rgb(0, 0, 0);
-    background-color: rgba(0, 0, 0, 0.4);
+    background-color: #5a8cdb;
     font-family: 'Fredoka One', cursive;
+    text-align: center;
 }
 
 .mem-modal-content {
