--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -172,17 +172,17 @@ body {
     height: 100%;
     overflow: auto;
     background-color: rgb(0, 0, 0);
-    background-color: #5a8cdb;
-    font-family: 'Fredoka One', cursive;
+    background-color: rgba(0, 0, 0, 0.4);
     text-align: center;
 }
 
 .mem-modal-content {
-    background-color: #fefefe;
+    background-color: #5a8cdb;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
+    font-family: 'Fredoka One', cursive;
 }
 
 .close {
